Fix default hosts